--- a/todoApp/views/pages/index.ejs
+++ b/todoApp/views/pages/index.ejs
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title><%= title %></title>
-</head>
-<body>
-
-    <%- include('../partials/header.ejs')  %>
+  </head>
+  <body>
+    <%- include('../partials/header.ejs') %>
 
     <h1><%= title %></h1>
 
     <ul>
-        <% for( let index = 0; index < todos.length; index++ ) { %>
-            <li>
-                <div class="todo-card">
-                    <input type="checkbox" name="completed" <%= todos[index].completed ? "checked" : "" %> />
-                    <label for=""><%= todos[index].title %></label>
-                    <div class="todo-description">
-                        <p><%= todos[index].description %></p>
-                    </div>
-                    <form action="/<%= todos[index].id %>" method="POST">
-                        <button type="submit">Delete</button>
-                    </form>
-                </div>
-            </li>
-        <% } %>
+      <% for( let index = 0; index < todos.length; index++ ) { %>
+      <li>
+        <div class="todo-card">
+          <input type="checkbox" name="completed" <%= todos[index].completed ?
+          "checked" : "" %> />
+          <label for=""><%= todos[index].title %></label>
+          <div class="todo-description">
+            <p><%= todos[index].description %></p>
+          </div>
+          <form action="/<%= todos[index].id %>" method="POST">
+            <button type="submit">Delete</button>
+          </form>
+          <form action="/edit">
+            <button type="submit">Edit</button>
+          </form>
+        </div>
+      </li>
+      <% } %>
     </ul>
 
     <%- include("../partials/footer.ejs") %>
-</body>
+  </body>
 </html>
